# composefs-rs

./: .bootc-dev-infra-commit.txt  .containerignore  .gitignore  BUG.md  Cargo.toml  Containerfile  Justfile  README.md
.claude/: settings.local.json
.config/: nextest.toml
.devcontainer/: devcontainer.json
.github/workflows/: bootc-revdep.yml  build-cfsctl-artifact.yml  ci.yml  examples.yml  fuzz.yaml  integration.yml  mirror-fixture-images.yml  publish.yml  rust.yml
bootc/: Justfile
ci/: fixture-images.txt
contrib/packaging/: install-build-deps.sh  install-test-deps.sh  lib.sh
crates/cfsctl/: Cargo.toml
crates/cfsctl/src/: composefs_info.rs  lib.rs  main.rs  mkcomposefs.rs
crates/composefs/: Cargo.toml
crates/composefs-boot/: Cargo.toml
crates/composefs-boot/src/: bootloader.rs  cmdline.rs  lib.rs  os_release.rs  selabel.rs  uki.rs  write_boot.rs
crates/composefs-erofs/: Cargo.toml
crates/composefs-erofs/fuzz/: Cargo.toml  generate_corpus.rs
crates/composefs-erofs/fuzz/fuzz_targets/: debug_image.rs  read_image.rs
crates/composefs-erofs/src/: composefs.rs  debug.rs  format.rs  lib.rs  reader.rs
crates/composefs-fuse/: Cargo.toml
crates/composefs-fuse/src/: lib.rs
crates/composefs-http/: Cargo.toml
crates/composefs-http/src/: lib.rs
crates/composefs-info/: Cargo.toml
crates/composefs-info/src/: main.rs
crates/composefs-ioctls/: Cargo.toml
crates/composefs-ioctls/src/: fsverity.rs  keyring.rs  lib.rs  loop_device.rs
crates/composefs-oci/: Cargo.toml
crates/composefs-oci/src/: boot.rs  client.rs  cstor.rs  image.rs  layer.rs  lib.rs  oci_image.rs  oci_layout.rs  referrers.rs  signature.rs  signing.rs  skopeo.rs  splitfdstream.rs  tar.rs  test_util.rs
crates/composefs-ostree/: Cargo.toml
crates/composefs-ostree/src/: commit.rs  lib.rs  objmap.rs  pull.rs  repo.rs
crates/composefs-setup-root/: Cargo.toml
crates/composefs-setup-root/src/: main.rs
crates/composefs-types/: Cargo.toml
crates/composefs-types/src/: lib.rs
crates/composefs/fuzz/: Cargo.toml  generate_corpus.rs
crates/composefs/fuzz/fuzz_targets/: debug_image.rs  read_image.rs
crates/composefs/src/: dumpfile.rs  dumpfile_parse.rs  filesystem_ops.rs  fs.rs  generic_tree.rs  lib.rs  mount.rs  mountcompat.rs  repository.rs  splitstream.rs  test.rs  tree.rs  util.rs
crates/composefs/src/erofs/: composefs.rs  debug.rs  dump.rs  format.rs  mod.rs  reader.rs  writer.rs
crates/composefs/src/fsverity/: algorithm.rs  digest.rs  formatted_digest.rs  hashvalue.rs  ioctl.rs  keyring.rs  mod.rs
crates/composefs/src/tests/assets/: special.dump
crates/composefs/tests/: corpus_compatibility.rs  erofs_reader.rs  mkfs.rs  proptest_mkfs.proptest-regressions  proptest_mkfs.rs  roundtrip.rs  should_fail.rs  test.sh
crates/composefs/tests/snapshots/: mkfs__empty.snap  mkfs__empty_v1.snap  mkfs__nested.snap  mkfs__simple.snap  mkfs__simple_v1.snap
crates/cstorage/: Cargo.toml
crates/cstorage/src/: error.rs  image.rs  layer.rs  lib.rs  lockfile.rs  storage.rs  tar_split.rs  userns.rs  userns_helper.rs
crates/erofs-debug/: Cargo.toml
crates/erofs-debug/src/: main.rs
crates/integration-tests/: Cargo.toml  README.md
crates/integration-tests/src/: cleanup.rs  lib.rs  main.rs
crates/integration-tests/src/tests/: cli.rs  cstor.rs  digest_stability.rs  mod.rs  oci_compat.rs  old_format.rs  podman.rs  privileged.rs  signing.rs
crates/mkcomposefs/: Cargo.toml
crates/mkcomposefs/src/: main.rs
crates/splitfdstream/: Cargo.toml
crates/splitfdstream/src/: lib.rs
crates/tar-header/: Cargo.toml
crates/tar-header/src/: lib.rs
crates/tar-header/src/stream/: entry.rs  error.rs  limits.rs  mod.rs  parser.rs  tests.rs
doc/: erofs.md  image-format.md  oci.md  repository.md  splitstream.md
doc/plans/: canonical-tar.md  incremental-pulls.md  oci-multiarch-copy.md  oci-sealing-impl.md  oci-sealing-spec.md  standardized-erofs-meta.md  unified-storage.md
examples/: .gitignore  README.md  pyproject.toml  s3-uploader.py  testthing.py
examples/bls/: Containerfile  Containerfile.arch  Containerfile.rawhide  Containerfile.rhel9  Containerfile.ubuntu  build
examples/bls/extra/etc/: mkinitcpio.conf
examples/bls/extra/usr/lib/dracut/modules.d/37composefs/: module-setup.sh
examples/bls/extra/usr/lib/initcpio/hooks/: composefs
examples/bls/extra/usr/lib/initcpio/install/: composefs
examples/bls/test-thing.workarounds/: README.md  systemd-ssh-proxy
examples/bls/test-thing.workarounds/debian/etc/default/: ssh
examples/bls/test-thing.workarounds/rhel9/etc/systemd/system/: notify-multiuser.service  sshd-vsock.socket  sshd-vsock@.service
examples/bls/test-thing.workarounds/rhel9/etc/systemd/system/multi-user.target.wants/: notify-multiuser.service
examples/bootc/: build
examples/bootc-bls/: build
examples/bootc-uki/: install-grub.sh  install-systemd-boot.sh
examples/common/: check-config  install-patched-tools  install-systemd-boot  make-image  run  run-repart
examples/common/repart.d/: 02-sysroot.conf
examples/test/: machine  run  run-tests  test_basic.py
examples/uki/: Containerfile  Containerfile.arch  build
examples/uki/extra/etc/: composefs_workarounds.te
examples/uki/extra/usr/lib/initcpio/hooks/: composefs
examples/uki/test-thing.fedora-42/etc/sysconfig/: sshd
examples/unified/: Containerfile  build
examples/unified-secureboot/: Containerfile  build  run
examples/unified-secureboot/extra/etc/: composefs_workarounds.te
examples/unified-secureboot/extra/etc/kernel/: uki.conf
src/: bootloader.rs  cmdline.rs  dumpfile.rs  dumpfile_parse.rs  filesystem_ops.rs  fs.rs  image.rs  lib.rs  mkfs.rs  mount.rs  os_release.rs  repository.rs  selabel.rs  splitstream.rs  test.rs  trace.rs  tree.rs  uki.rs  util.rs  write_boot.rs  zstd_encoder.rs
src/erofs/: composefs.rs  debug.rs  format.rs  mod.rs  reader.rs  writer.rs
src/fsverity/: digest.rs  hashvalue.rs  ioctl.rs  mod.rs
src/oci/: image.rs  mod.rs  tar.rs
tests/: mkfs.rs  repo.rs  test-oci-sign-verify.sh
tests/snapshots/: mkfs__empty.snap  mkfs__simple.snap
(+3 files in other folders)
