[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/containers/composefs-rs"
rust-version = "1.88.0"
version = "0.3.0"

[workspace.lints.rust]
missing_docs = "deny"
missing_debug_implementations = "deny"
unsafe_code = "deny" # https://github.com/containers/composefs-rs/issues/123

[workspace.dependencies]
composefs = { version = "0.3.0", path = "crates/composefs", default-features = false }
cfsctl = { version = "0.3.0", path = "crates/cfsctl", default-features = false }
composefs-ioctls = { version = "0.3.0", path = "crates/composefs-ioctls", default-features = false }
composefs-oci = { version = "0.3.0", path = "crates/composefs-oci", default-features = false }
composefs-boot = { version = "0.3.0", path = "crates/composefs-boot", default-features = false }
composefs-http = { version = "0.3.0", path = "crates/composefs-http", default-features = false }

# JSON-RPC with FD passing for userns helper
jsonrpc-fdpass = { git = "https://github.com/cgwalters/jsonrpc-fdpass", rev = "b30fa1d" }

[profile.dev.package.sha2]
# this is *really* slow otherwise
opt-level = 3

[profile.profiling]
inherits = "release"
debug = true

[workspace.metadata.vendor-filter]
# match cargo-vendor-filterer config from bootc
platforms = ["*-unknown-linux-gnu"]
tier = "2"
all-features = true
