[workspace]
members = ["crates/*"]
# Exclude integration-tests from default `cargo test` — those require a
# built cfsctl binary and (for privileged tests) a VM.  Run them via
# `just test-integration` or `just test-integration-vm` instead.
default-members = [
    "crates/cfsctl",
    "crates/composefs",
    "crates/composefs-boot",
    "crates/composefs-fuse",
    "crates/composefs-http",
    "crates/composefs-ioctls",
    "crates/composefs-oci",
    "crates/composefs-setup-root",
    "crates/cstorage",
    "crates/erofs-debug",
    "crates/splitfdstream",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/containers/composefs-rs"
rust-version = "1.88.0"
version = "0.3.0"

[workspace.lints.rust]
missing_docs = "deny"
missing_debug_implementations = "deny"
unsafe_code = "deny" # https://github.com/containers/composefs-rs/issues/123

[workspace.dependencies]
composefs = { version = "0.3.0", path = "crates/composefs", default-features = false }
cfsctl = { version = "0.3.0", path = "crates/cfsctl", default-features = false }
composefs-ioctls = { version = "0.3.0", path = "crates/composefs-ioctls", default-features = false }
composefs-oci = { version = "0.3.0", path = "crates/composefs-oci", default-features = false }
composefs-boot = { version = "0.3.0", path = "crates/composefs-boot", default-features = false }
composefs-http = { version = "0.3.0", path = "crates/composefs-http", default-features = false }
cap-std-ext = "5.0"
ocidir = "0.7.1"

# JSON-RPC with FD passing for userns helper
jsonrpc-fdpass = { version = "0.1.0", default-features = false }

[profile.dev.package.sha2]
# this is *really* slow otherwise
opt-level = 3

[profile.profiling]
inherits = "release"
debug = true

[workspace.metadata.vendor-filter]
# match cargo-vendor-filterer config from bootc
platforms = ["*-unknown-linux-gnu"]
tier = "2"
all-features = true
