[package]
name = "cfsctl"
version = "0.2.0"
edition = "2021"
rust-version = "1.82.0"
description = "Rust library for the composefs filesystem"
keywords = ["composefs"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/containers/composefs-rs"
readme = "README.md"
default-run = "cfsctl"
exclude = ["/.git*", "/examples/"]

[features]
default = ['oci']
oci = ['composefs-oci']

[dependencies]
composefs = "0.2.0"
composefs-oci = { version = "0.2.0", optional = true }
composefs-boot = "0.2.0"
anyhow = { version = "1.0.87", default-features = false }
clap = { version = "4.0.1", default-features = false, features = ["std", "help", "usage", "derive"] }
env_logger = { version = "0.11.0", default-features = false }
hex = { version = "0.4.0", default-features = false }
rustix = { version = "1.0.0", default-features = false, features = ["fs", "process"] }
tokio = { version = "1.24.2", default-features = false }

