[package]
name = "composefs-http"
description = "HTTP downloader for composefs repositories"
keywords = ["composefs", "http"]

edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { version = "1.0.87", default-features = false }
bytes = { version = "1.7.1", default-features = false }
composefs = { workspace = true }
hex = { version = "0.4.0", default-features = false }
indicatif = { version = "0.18.0", default-features = false }
reqwest = { version = "0.13.0", features = ["zstd"] }
sha2 = { version = "0.11.0", default-features = false }
tokio = { version = "1.24.2", default-features = false }

[dev-dependencies]
similar-asserts = "1.7.0"

[lints]
workspace = true
