[package]
name = "composefs-ioctls"
description = "Low-level ioctl wrappers for composefs (fs-verity, loop devices)"
keywords = ["composefs", "fsverity", "ioctl"]

edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []
loop-device = []

[dependencies]
rustix = { version = "1.0.0", features = ["fs"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3.8.0"
test-with = { version = "0.14", default-features = false }

[lints]
workspace = true
