[package]
name = "composefs-oci"
description = "Use OCI container images with composefs"
keywords = ["composefs", "oci"]

edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["containers-storage"]
containers-storage = ["dep:cstorage", "cstorage?/userns-helper"]

[dependencies]
anyhow = { version = "1.0.87", default-features = false }
fn-error-context = "0.2"
async-compression = { version = "0.4.0", default-features = false, features = ["tokio", "zstd", "gzip"] }
base64 = { version = "0.22", default-features = false, features = ["std"] }
bytes = { version = "1", default-features = false }
composefs = { workspace = true }
containers-image-proxy = { version = "0.9.2", default-features = false }
cstorage = { path = "../cstorage", version = "0.3.0", optional = true }
hex = { version = "0.4.0", default-features = false }
indicatif = { version = "0.17.0", default-features = false, features = ["tokio"] }
oci-spec = { version = "0.8.0", default-features = false }
rustix = { version = "1.0.0", features = ["fs"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
sha2 = { version = "0.10.1", default-features = false }
tar = { version = "0.4.38", default-features = false }
tar-header = { path = "../tar-header", version = "0.3.0" }
tokio = { version = "1.24.2", features = ["rt-multi-thread"] }
tokio-util = { version = "0.7", default-features = false, features = ["io"] }

[dev-dependencies]
composefs = { workspace = true, features = ["test"] }
once_cell = "1.21.3"
proptest = "1"
similar-asserts = "1.7.0"
tempfile = "3.8.0"

[lints]
workspace = true
