[package]
name = "composefs-oci"
description = "Use OCI container images with composefs"
keywords = ["composefs", "oci"]

edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
test = ["tar", "composefs/test"]
boot = ["composefs-boot"]

[dependencies]
anyhow = { version = "1.0.87", default-features = false }
fn-error-context = "0.2"
async-compression = { version = "0.4.0", default-features = false, features = ["tokio", "zstd", "gzip"] }
bytes = { version = "1", default-features = false }
composefs = { workspace = true }
composefs-boot = { workspace = true, optional = true }
containers-image-proxy = { version = "0.9.2", default-features = false }
hex = { version = "0.4.0", default-features = false }
indicatif = { version = "0.17.0", default-features = false, features = ["tokio"] }
oci-spec = { version = "0.8.0", default-features = false }
rustix = { version = "1.0.0", features = ["fs"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "2.0.0", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
sha2 = { version = "0.10.1", default-features = false }
tar = { version = "0.4.38", default-features = false, optional = true }
tar-core = "0.1.0"
tokio = { version = "1.24.2", features = ["rt-multi-thread"] }
tokio-util = { version = "0.7", default-features = false, features = ["io"] }

[dev-dependencies]
cap-std = { version = "3.4.5", default-features = false }
cap-tempfile = { version = "3.4.5", default-features = false }
similar-asserts = "1.7.0"
tar = { version = "0.4.38", default-features = false }
composefs = { workspace = true, features = ["test"] }
composefs-boot = { workspace = true }
once_cell = "1.21.3"
proptest = "1"
tempfile = "3.8.0"

[lints]
workspace = true
