[package]
name = "composefs-ostree"
description = "ostree support for composefs"
keywords = ["composefs", "ostree"]

edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { version = "1.0.87", default-features = false }
composefs = { workspace = true }
configparser = { version = "3.1.0", features = [] }
flate2 = { version = "1.1.2", default-features = true }
gvariant = { version = "0.5.0", default-features = true}
hex = { version = "0.4.0", default-features = false, features = ["std"] }
rustix = { version = "1.0.0", default-features = false, features = ["fs", "mount", "process", "std"] }
sha2 = { version = "0.10.1", default-features = false }
zerocopy = { version = "0.8.0", default-features = false, features = ["derive", "std"] }
reqwest = { version = "0.12.15", features = ["zstd"] }

[dev-dependencies]
similar-asserts = "1.7.0"

[lints]
workspace = true
