[package]
name = "composefs-setup-root"
version = "0.2.0"
edition = "2021"
rust-version = "1.82.0"
description = "Rust library for the composefs filesystem"
keywords = ["composefs"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/containers/composefs-rs"
readme = "README.md"
default-run = "composefs-setup-root"
exclude = ["/.git*", "/examples/"]

[features]
default = ['pre-6.15']
'pre-6.15' = []

[dependencies]
composefs = "0.2.0"
composefs-boot = "0.2.0"
anyhow = { version = "1.0.87", default-features = false }
clap = { version = "4.0.1", default-features = false, features = ["std", "help", "usage", "derive"] }
rustix = { version = "1.0.0", default-features = false }
env_logger = { version = "0.11.0", default-features = false }
serde = { version = "1.0.145", default-features = false }
toml = { version = "0.8.0", default-features = false, features = ["parse"] }
