[package]
name = "composefs-types"
description = "Core types for composefs (FsVerityHashValue, tree structures)"
publish = false

edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
hex = { version = "0.4.0", default-features = false, features = ["std"] }
sha2 = { version = "0.10.1", default-features = false, features = ["std"] }
zerocopy = { version = "0.8.0", default-features = false, features = ["derive", "std"] }

[lints]
workspace = true
