[package]
name = "integration-tests"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "cfsctl-integration-tests"
path = "src/main.rs"

[dependencies]
anyhow = "1"
cap-std-ext = { workspace = true }
composefs = { workspace = true }
libtest-mimic = "0.8"
linkme = "0.3"
ocidir = { workspace = true }
paste = "1"
rustix = { version = "1.0.0", default-features = false, features = ["process"] }
serde_json = "1.0"
tar = "0.4"
tempfile = "3"
xshell = "0.2"

[lints]
workspace = true
