[package]
name = "integration-tests"
publish = false
description = "Integration tests for composefs-rs (not published)"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "cfsctl-integration-tests"
path = "src/main.rs"

[[bin]]
name = "test-cleanup"
path = "src/cleanup.rs"

[dependencies]
anyhow = "1"
cap-std-ext = "5.0"
composefs = { workspace = true }
# Only the test_util module is used — for creating test OCI images.
# All verification must go through the cfsctl CLI.
composefs-oci = { workspace = true, features = ["test", "boot", "containers-storage"] }
hex = "0.4"
libtest-mimic = "0.8"
linkme = "0.3"
ocidir = "0.7"
paste = "1"
rustix = { version = "1", features = ["fs", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
xshell = "0.2"

[lints]
workspace = true
