[package]
name = "splitfdstream"
description = "Binary format for serializing data with external file descriptor references"
keywords = ["splitfdstream", "fd", "serialization"]

edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
rustix = { version = "1.0.0", default-features = false, features = ["fs", "std"] }

[dev-dependencies]
proptest = "1"
tempfile = { version = "3.8.0", default-features = false }

[lints]
workspace = true
