[package]
name = "composefs-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

# Separate workspace from the parent — required by cargo-fuzz.
[workspace]

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.composefs]
path = ".."

[[bin]]
name = "read_image"
path = "fuzz_targets/read_image.rs"
test = false
doc = false
bench = false

[[bin]]
name = "debug_image"
path = "fuzz_targets/debug_image.rs"
test = false
doc = false
bench = false

[[bin]]
name = "generate-corpus"
path = "generate_corpus.rs"
